--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -50,7 +50,10 @@
                 <div>
                     {{#if user}}
                         Welcome back, <a href="/user/profile">{{user.name}}</a>
-                        <a href="/user/logout" class="btn btn-primary btn-sm">Logout</a>
+                        <a href="/user/logout" class="ml-3 btn btn-primary btn-sm">Logout</a>
+                    {{#else}}
+                        Hello, new user
+                        <a href="/user/login" class="ml-3 btn btn-primary btn-sm">Login</a>
                     {{/if}}
                 </div>
             </div>
