completed csrf and initiated cloudinary

--- a/views/layouts/base.hbs
+++ b/views/layouts/base.hbs
@@ -82,6 +82,8 @@
             {{#block 'content'}}{{/block}}
         </section>
     </div>
+    {{#block 'js'}}
+    {{/block}}
 </body>
 
 </html>
