--- a/views/posters/create.hbs
+++ b/views/posters/create.hbs
@@ -4,11 +4,42 @@
 
 <h1> Create new poster </h1>
 <form method="POST">
-<input type="hidden" name="_csrf" value="{{csrfToken}}"/>
-{{{form}}}
-<input type="submit" class="mt-3 btn btn-danger"/>
+    {{{form}}}
+    <div>
+        <button class="btn btn-primary btn-sm" id="upload_widget"> Upload Image </button>
+        <img src="" id="uploaded_image" style="display:none" class="img-fluid"/>
+    </div>
+    <input type="hidden" name="_csrf" value="{{csrfToken}}"/>
+    <input type="submit" class="mt-3 btn btn-danger"/>
 </form>
-
 {{/block}}
 
+{{#block "js"}}
+<script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js" integrity="sha512-aoTNnqZcT8B4AmeCFmiSnDlc4Nj/KPaZyB5G7JnOnUEkdNpCZs1LCankiYi01sLTyWy+m2P+W4XM+BuQ3Q4/Dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+{{!-- <script>
+    const cloudinaryWidget = cloudinary.createUploadWidget({
+        cloudName:"{{cloudinaryName}}",
+        apiKey:"{{cloudinaryApiKey}}",
+        uploadPreset:"{{cloudinaryPreset}}",
+        uploadSignature: async function(callback, params_to_sign){
+            const response = await axios.get('/cloudinary/sign',{
+                params:{
+                    params_to_sign
+                }
+            })
+            callback(response.data)   
+        }
+    }, function(error, result){
+        if (!error && result.event == 'success'){
+            const imageUrl = result.info.url;
+
+        }
+    } --}}
+
+</script>
+
+
+{{/block}}
 {{/extends}}
